@@ -1,0 +1,11 @@
+package com.github.chrox.kpvbooklet;
+
+public class CCRequest extends CCAdapter{
+	
+	public CCRequest() {}
+	
+	// dummy perform name
+	public String getPerformName() {
+		return "dummy";
+	}
+}
