@@ -1,0 +1,10 @@
+package com.github.chrox.kpvbooklet;
+
+public class CCRequest532 extends CCAdapter{
+	
+	public CCRequest532() {}
+	
+	public String getPerformName() {
+		return "rL";
+	}
+}
